regression/parse_pool/progtest16.sfp.out

sfc in program parse_pool/progtest16.sfp
syntax error at line 2, position 49:
configuration foo { nullApp() nullNet() nullMac nullRadio() }
                                                ^
